# agent-sessions

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: publish.yml  release-assets.yml  release-candidate.yml  test.yml
scripts/: build_release_assets.py  set_release_version.py
src/agent_sessions/: __init__.py  cli.py  models.py  path_utils.py  running.py
src/agent_sessions/providers/: __init__.py  claude_code.py  codex.py  cordless.py  discordo.py  endcord.py  opencode.py  pi.py
tests/: test_claude_code.py  test_cli.py  test_codex.py  test_cordless.py  test_discordo.py  test_discover.py  test_endcord.py  test_models.py  test_opencode.py  test_path_utils.py  test_pi.py  test_release_scripts.py  test_running.py
