[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-sessions"
version = "0.1.0"
description = "Discover and inspect local AI coding agent sessions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Lars de Ridder", email = "lars@xithing.io" },
]
keywords = ["ai", "agent", "sessions", "discovery", "claude", "codex"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "black",
]

[project.urls]
Homepage = "https://github.com/larsderidder/agent-sessions"
Repository = "https://github.com/larsderidder/agent-sessions"
Issues = "https://github.com/larsderidder/agent-sessions/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_sessions"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 99
target-version = ["py311"]
